# PR10_2_A

./: CMakeLists.txt
include/: functions.h  structures.h
src/: functions.cpp  main.cpp
tests/: test_h.cpp
